# OP2-DG-Toolkit

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build-archer.sh  build-cirrus.sh  build.sh  code_gen.sh  config.mk  preprocessor.py  preprocessor_3d.py
src/: CMakeLists.txt  config.cpp  constants.cpp  constants.cu  dg_abort.cpp  dg_constants.cpp  dg_constants.cu  dg_constants_setup.cpp  dg_dat_pool.cpp  dg_mesh.cpp  dg_mesh_cpu.cpp  dg_mesh_gpu.cu  dg_mesh_op.cpp  dg_op2_blas.cpp  dg_op2_blas_op.cpp  dg_operators.cpp  dg_operators_op.cpp  mpi_helper_func.cpp  timing.cpp
src/blas/: dg_op2_blas.cpp  dg_op2_blas_cpu.cpp  dg_op2_gemv_kernel.cu  dg_op2_gemv_kernel_gpu.cu  dg_op2_gemv_kernel_hip.hip  dg_op2_gemv_kernel_soa.cu  dg_op2_gemv_kernel_soa_gpu.cu  dg_op2_gemv_kernel_soa_hip.hip
src/constants/: all_constants.h  constant_cubDr.h  constant_gF0DrR.h  constant_gF0DsR.h  constant_gF1Dr.h  constant_gF1DrR.h  constant_gF1Ds.h  constant_gF1DsR.h  constant_gF2Dr.h  constant_gF2DsR.h  constant_gFInterp0.h  constant_gFInterp1.h  constant_gFInterp2.h  constant_gInterp.h  constant_gaussW.h  constant_invMassGaussInterpT.h  constant_mass.h  constant_r.h  constant_s.h  constant_util.h
src/constants_calc/: jacobi.cpp  nodes.cpp  setup.cpp
src/cuBLAS/: init_gauss.cu  init_grid.cu  inv.cu  inv_mm.cu  op2_gemm.cu  op2_gemm_batch.cu  op2_gemv.cu  op2_gemv_batch.cu
src/cuBLAS_op/: init_gauss_op.cu  init_grid_op.cu  inv_mm_op.cu  inv_op.cu  op2_gemm_batch_op.cu  op2_gemm_op.cu  op2_gemv_batch_op.cu  op2_gemv_op.cu
src/cuda/: copy_new_orders_int_kernel.cu  copy_new_orders_kernel.cu  cub_div_kernel.cu  cub_div_weak_kernel.cu  cub_grad_kernel.cu  cub_grad_weak_kernel.cu  cub_mm_init_kernel.cu  curl_kernel.cu  dg_mesh_hybkernels.cu  dg_mesh_kernels.cu  div_kernel.cu  gemv_cub_dr_kernel.cu  gemv_cub_ds_kernel.cu  gemv_cub_np_npT_kernel.cu  gemv_cub_np_np_kernel.cu  gemv_cub_v_kernel.cu  gemv_dr_kernel.cu  gemv_ds_kernel.cu  gemv_gauss_interpT_kernel.cu  gemv_gauss_interp_kernel.cu  gemv_inv_mass_gauss_interpT_kernel.cu  gemv_inv_mass_kernel.cu  gemv_liftT_kernel.cu  gemv_lift_kernel.cu  gemv_mass_kernel.cu  gemv_np_npT_kernel.cu  gemv_np_np_kernel.cu  grad_kernel.cu  init_cubature_kernel.cu  init_edges_kernel.cu  init_gauss_kernel.cu  init_grid_kernel.cu  init_nodes_kernel.cu  init_order_kernel.cu  interp_dat_to_max_order_kernel.cu  interp_dat_to_new_order_int_kernel.cu  interp_dat_to_new_order_kernel.cu  inv_J_kernel.cu
src/dg_constants/: dg_constant_matrix.cpp  dg_constant_matrix_cpu.cpp  dg_constant_matrix_gpu.cu  dg_constant_matrix_hip.hip  dg_constants_2d.cpp  dg_constants_2d_cpu.cpp  dg_constants_2d_gpu.cu  dg_constants_2d_hip.cpp  dg_constants_2d_hip.hip  dg_constants_3d.cpp  dg_constants_3d_cpu.cpp  dg_constants_3d_gpu.cu  dg_constants_3d_hip.cpp  dg_constants_3d_hip.hip
src/dg_mesh/: dg_mesh_2d.cpp  dg_mesh_2d_cpu.cpp  dg_mesh_2d_gpu.cu  dg_mesh_2d_hip.cpp  dg_mesh_2d_hip.hip  dg_mesh_3d.cpp  dg_mesh_3d_cpu.cpp  dg_mesh_3d_gpu.cu  dg_mesh_3d_hip.cpp  dg_mesh_3d_hip.hip
src/dg_operators/: dg_operators_2d.cpp  dg_operators_3d.cpp  grad_3d_test.cu
src/kernels/: J.h  J_3d.h  J_3d_sp.h  J_sp.h  avg_2d.h  avg_2d_sp.h  avg_3d.h  avg_3d_sp.h  block_jacobi_pre.h  calc_geom.h  copy_dg_np.h  copy_dg_np_dp2sp_tk.h  copy_dg_np_sp2dp_tk.h  copy_dg_np_sp_tk.h  copy_dg_np_tk.h  copy_diag.h  copy_geof_2d.h  copy_new_orders.h  copy_new_orders_int.h  copy_normals_2d.h  copy_normals_3d.h  copy_normals_bface_2d.h  copy_normals_bfaces_3d.h  copy_to_bedges.h  copy_to_edges.h  copy_to_edges_ll.h  cub_div.h  cub_div_2d.h  cub_div_weak.h  cub_div_weak_2d.h  cub_grad.h  cub_grad_2d.h  cub_grad_weak.h  cub_grad_weak_2d.h  cub_mm_init.h  curl.h  curl0_3d.h  curl1_3d.h  curl2_3d.h  curl_2d.h  (+261 more)
src/linear_solvers/: linear_solver.cpp
src/matrices/: poisson_coarse_matrix.cpp  poisson_coarse_matrix_cpu.cpp  poisson_coarse_matrix_gpu.cu  poisson_coarse_matrix_hip.hip  poisson_matrix.cpp  poisson_matrix_cpu.cpp  poisson_matrix_free.cpp  poisson_matrix_free_block_diag.cpp  poisson_matrix_free_diag.cpp  poisson_matrix_gpu.cu  poisson_matrix_hip.hip  poisson_semi_matrix_free.cpp
src/op2_utils/: utils.cpp  utils.cu  utils_cpu.cpp  utils_gpu.cu  utils_hip.cpp  utils_hip.hip
src/openBLAS/: init_gauss.cpp  init_grid.cpp  inv.cpp  inv_mm.cpp  op2_gemm.cpp  op2_gemm_batch.cpp  op2_gemv.cpp  op2_gemv_batch.cpp
src/openBLAS_op/: init_gauss_op.cpp  init_grid_op.cpp  inv_mm_op.cpp  inv_op.cpp  op2_gemm_batch_op.cpp  op2_gemm_op.cpp  op2_gemv_batch_op.cpp  op2_gemv_op.cpp
src/openacc/: cub_div_acckernel.c  cub_div_weak_acckernel.c  cub_grad_acckernel.c  cub_grad_weak_acckernel.c  curl_acckernel.c  dg_mesh_acckernels.c  div_acckernel.c  grad_acckernel.c  init_cubature_acckernel.c  init_edges_acckernel.c  init_gauss_acckernel.c  init_grid_acckernel.c  init_nodes_acckernel.c  inv_J_acckernel.c
src/openmp/: copy_new_orders_int_kernel.cpp  copy_new_orders_kernel.cpp  cub_div_kernel.cpp  cub_div_weak_kernel.cpp  cub_grad_kernel.cpp  cub_grad_weak_kernel.cpp  cub_mm_init_kernel.cpp  curl_kernel.cpp  dg_mesh_kernels.cpp  div_kernel.cpp  gemv_cub_dr_kernel.cpp  gemv_cub_ds_kernel.cpp  gemv_cub_np_npT_kernel.cpp  gemv_cub_np_np_kernel.cpp  gemv_cub_v_kernel.cpp  gemv_dr_kernel.cpp  gemv_ds_kernel.cpp  gemv_gauss_interpT_kernel.cpp  gemv_gauss_interp_kernel.cpp  gemv_inv_mass_gauss_interpT_kernel.cpp  gemv_inv_mass_kernel.cpp  gemv_liftT_kernel.cpp  gemv_lift_kernel.cpp  gemv_mass_kernel.cpp  gemv_np_npT_kernel.cpp  gemv_np_np_kernel.cpp  grad_kernel.cpp  init_cubature_kernel.cpp  init_edges_kernel.cpp  init_gauss_kernel.cpp  init_grid_kernel.cpp  init_nodes_kernel.cpp  init_order_kernel.cpp  interp_dat_to_max_order_kernel.cpp  interp_dat_to_new_order_int_kernel.cpp  interp_dat_to_new_order_kernel.cpp  inv_J_kernel.cpp
src/openmp4/: cub_div_omp4kernel.cpp  cub_div_omp4kernel_func.cpp  cub_grad_omp4kernel.cpp  (+25 more)
tests/: CMakeLists.txt  dg_utils_tests.cpp
tools/: CMakeLists.txt  hdf52vtk.cpp  hdf52vtk_2D.cpp  hdf52vtk_3D.cpp  hdf52vtk_3D_partial.cpp  vtk2hdf5_2D.cpp  vtk2hdf5_3D.cpp  vtk2hdf5_periodic_cube_3D.cpp
(+554 files in other folders)
